@@ -47,6 +47,7 @@ public class NacosApp {
 		// -Dnacos.remote.server.rpc.tls.certPrivateKey=nacos-server-key.pem
 		// -Dnacos.remote.server.rpc.tls.trustCollectionCertFile=nacos-ca-cert.pem
 		// -Dnacos.remote.server.rpc.tls.certPrivateKeyPassword=laokou123
+		// --add-opens=java.base/java.lang=ALL-UNNAMED
 		// @formatter:on
 		new SpringApplicationBuilder(NacosApp.class).web(WebApplicationType.SERVLET).run(args);
 	}
